[package]
name = "secondary_rewriter"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmdcolin/secondary_rewriter"
description = "Adds SEQ and QUAL fields to secondary alignments from the primary alignment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
